# f84d4400c4da40f51804016ca836b36619c1171c9112c2180304b0c773c2457d_spam-detection

./: .pre-commit-config.yaml  .yamllint  Dockerfile  README.md  docker-compose.yml  docker_requirements.txt  pyproject.toml
.github/workflows/: ruff-action.yml
airflow/: Dockerfile  requirements.txt
airflow/dags/: ml_pipeline_dag.py
deployments/ml-pipeline/: Dockerfile
notebooks/: spam-detection.ipynb
src/: app.py  data_preprocessing.py  evaluation.py  feature_engineering.py  inference.py  model_training.py  run_pipeline.py
tests/: test_app.py  test_preproc.py
