[project]
name = "spam-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "flask==3.1.1",
    "nltk==3.9.1",
    "numpy==2.3.1",
    "pandas==2.3.1",
    "pre-commit==4.2.0",
    "pytest==8.4.1",
    "pytest-mock==3.14.1",
    "requests==2.32.4",
    "scikit-learn==1.7.0",
    "seaborn==0.13.2",
    "yamllint==1.37.1",
]

[tool.pytest.ini_options]
pythonpath = "."  # in order to allow pytest to import src.app
